chatbot/manifest/chatbot/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /chatbot/
    rewrite:
      uri: /
    route:
    - destination:
        # This needs to be updated manually to be in sync with kustomize
        # generated values (i.e. namespace and prefix)
        host: server.chatbot.svc.cluster.local
        port:
          number: 80
